<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    android:orientation="vertical"
    tools:context=".AppActivity.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/head_pic_register"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="130dp"
            android:src="@drawable/welcome" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#2F4F4F"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputname"
                android:textColorHint="#2F4F4F" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#2F4F4F"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/userpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputpassword"
                android:textColorHint="#2F4F4F" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="#2F4F4F"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/gender_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/man_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/man"
                    android:textColor="#2F4F4F"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/girl_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/girl"
                    android:textColor="#2F4F4F"
                    android:textSize="20sp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/register"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="145dp"
            android:background="@drawable/button_normal"
            android:text="@string/register"
            android:textColor="#2F4F4F"
            android:textSize="27sp" />
    </LinearLayout>

</LinearLayout>