<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:orientation="vertical"
    tools:context=".AppActivity.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/head_pic"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginLeft="130dp"
            android:src="@drawable/welcome" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#2F4F4F"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input"
                android:textColorHint="#2F4F4F" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#2F4F4F"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/userpassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/input_password"
                android:textColorHint="#2F4F4F" />

            <ImageView
                android:id="@+id/show_password"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/bukejian" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp">

            <CheckBox
                android:id="@+id/remember_password"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="记住密码" />

            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="还没有账号？快来注册吧!" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/login"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:background="@drawable/button_normal"
            android:text="@string/login"
            android:textColor="#2F4F4F"
            android:textSize="27sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="170dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="170dp"
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="忘记密码？"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>